--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,17 @@
 [versions]
 agp = "8.4.0"
 kotlin = "1.9.0"
-coreKtx = "1.13.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.9.0"
-composeBom = "2023.08.00"
+composeBom = "2024.05.00"
+daggerHilt = "2.49"
+roomVersion = "2.6.1"
+compose = "1.6.7"
+androidxHilt = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,8 +28,19 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+dagger-hilt = {group = "com.google.dagger", name="hilt-android", version.ref = "daggerHilt"}
+dagger-hilt-kept = {group = "com.google.dagger", name="hilt-compiler", version.ref="daggerHilt"}
+androidx-hilt-navigation = {group="androidx.hilt", name="hilt-navigation-compose", version.ref="androidxHilt"}
+androidx-hilt-navigation-kapt = {group="androidx.hilt", name="hilt-compiler", version.ref="androidxHilt"}
+androidx-room = {group = "androidx.room", name="room-runtime", version.ref = "roomVersion"}
+androidx-room-kapt = {group = "androidx.room", name="room-compiler", version.ref="roomVersion"}
+androidx-compose-ui = {group = "androidx.compose.ui", name = "ui", version.ref = "compose"}
+androidx-compose-material = {group = "androidx.compose.material", name = "material", version.ref = "compose"}
+androidx-compose-ui-tooling-preview = {group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref="compose"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
+
 
